# treat_cancer_keras

./: .gitignore  1-data_org.ipynb  2-data_nlp.ipynb  3-keras_DistilbertClass.ipynb  4-kerasLSTM_tuning.ipynb  5-train_results.ipynb  6-test_results.ipynb  README.md  README_PT-BR.md  README_it.md  data_nlp_token.ipynb  data_nlp_token_colab.ipynb  data_org.ipynb  functions.py  modelKerasNLP_colab.ipynb  pyproject.toml
src/treat_cancer_keras/: data_nlp.ipynb  data_org.ipynb  treat_cancer.ipynb
src/treat_cancer_keras/data/: GB_clf_bench.pkl  rand_search.pkl  tfidf_vectorizer.pkl
