[project]
name = "Treat-Cancer-keras"
version = "0.1.0"
description = "Personalized Medicine: Redefining Cancer Treatment"
authors = [
    {name = "Roberto R Balbinotti", email = "balbinotti@proton.me"},
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.5.0",
    "wheel>=0.44.0",
    "setuptools>=75.1.0",
    "keras>=3.4.1",
    "keras-nlp>=0.15.1",
    "plotly>=5.23.0",
    "nltk>=3.8.1",
    "scikit-learn>=1.5.1",
    "pyperclip>=1.9.0",
    "keras-tuner>=1.4.7",
    "spacy>=3.7.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pip>=24.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
    "nbformat>=5.10.4",
    "tqdm>=4.66.5",
]
